# evaluation-metrics

./: .dockerignore  .gitignore  .gitlab-ci.yml  CONTRIBUTE.md  README.md  _config.yml  _toc.yml  docker-compose.yml  docusaurus.config.js  package-lock.json  package.json  pyproject.toml
_build/.doctrees/: CONTRIBUTE.doctree  README.doctree  content.doctree  environment.pickle  intro.doctree  markdown.doctree  metrics.doctree  notebooks.doctree
_build/.doctrees/metrics/: 00_F1.doctree  00_F2.doctree  01_ROC.doctree  02_CK.doctree  03_LL.doctree  04_JS.doctree  05_R2.doctree  06_KL.doctree  07_FM.doctree  08_BA.doctree  09_RS.doctree  10_HS.doctree  11_CS.doctree  12_VS.doctree  13_ME.doctree  14_CD.doctree  15_MS.doctree  16_MC.doctree  17_PR.doctree  18_DT.doctree  19_CG.doctree  20_LC.doctree  21_MAE.doctree
_build/html/: .buildinfo  CONTRIBUTE.html  README.html  genindex.html  intro.html  markdown.html  metrics.html  notebooks.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: intro.md  metrics.md  notebooks.ipynb
_build/html/metrics/: 00_F1.html  00_F2.html  01_ROC.html  02_CK.html  03_LL.html  04_JS.html  05_R2.html  06_KL.html  07_FM.html  (+14 more)
_build/jupyter_execute/: notebooks.ipynb  notebooks.py
deploy/: Dockerfile  kube-deploy.yaml  nginx.conf
docs/Metrics/: 00_F1.md  01_ROC.md  02_CK.md  03_LL.md  04_JS.md  05_R2.md  09_RS.md  10_HS.md  11_CS.md  15_MS.md  16_MC.md  17_PR.md
metrics/: 01_ROC.md  03_LL.md  04_JS.md  08_BA.md  09_RS.md  11_CS.md  12_VS.md  13_ME.md  14_CD.md  16_MC.md  17_PR.md  19_LC.md  20_MAE.md  21_MAPE.md
(+12 files in other folders)
